# CCUFinHealth

./: README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/schemas/: profile.py
app/services/: __init__.py  analysis.py  exceptions.py
data/: financial_health_assessment.json
docs/: financial_health_platform.md  implementation_plan.md  member_engagement_programs.md
tests/: test_analysis.py  test_api.py
